<resources>
    <string name="app_name">智慧點餐系統</string>
    <string name="text_member">會員中心</string>
    <string name="text_check">訂單查詢</string>
    <string name="text_menu">菜單</string>
    <string name="text_message">優惠資訊</string>
    <string name="text_rating">評分</string>
    <string name="Service">Service</string>
    <string name="msg_NoMessagesFound">無優惠訊息</string>
    <string name="text_Update">更新</string>
    <string name="text_Delete">刪除</string>
    <string name="msg_DeleteFail">刪除失敗</string>
    <string name="msg_DeleteSuccess">刪除成功</string>
    <string name="msg_NoNetwork">無網路服務</string>
    <string name="hint_etUser">請輸入e-mail</string>
    <string name="hint_etPassword">請輸入密碼(4-8字元)</string>
    <string name="hint_etPasswordOld">請輸入舊密碼</string>
    <string name="text_Login">登\t\t\t\t\t入</string>
    <string name="text_forget_password">忘記密碼</string>
    <string name="text_register">註冊新帳戶</string>
    <string name="text_name">\t姓\t\t名</string>
    <string name="hint_insertName">請輸入姓名</string>
    <string name="text_title">\t稱\t\t謂</string>
    <string name="text_account">\t帳\t\t號</string>
    <string name="text_password">\t密\t\t碼</string>
    <string name="text_passwordOld">&#160;舊&#160;密&#160;碼</string>
    <string name="text_passwordNew">&#160;新&#160;密&#160;碼</string>
    <string name="text_CheckPassword">確認密碼</string>
    <string name="hint_CheckPassword">請再次輸入密碼</string>
    <string name="text_Phone">手機號碼</string>
    <string name="hint_Phone">請輸入手機號碼</string>
    <string name="text_Register">註冊</string>
    <string name="msg_PasswordError">確認密碼錯誤！</string>
    <string name="msg_InsertFail">新增失敗</string>
    <string name="msg_InsertSuccess">新增成功</string>
    <string name="text_rbMale">先生</string>
    <string name="text_rbFemale">小姐</string>
    <string name="msg_ColumnNull">欄位不得空白</string>
    <string name="msg_InvalidEmailOrPassword">帳號密碼錯誤</string>
    <string name="msg_InvalidUserOrPassword">帳號密碼錯誤！！</string>
    <string name="msg_InvalidPhone">請輸入手機！！</string>
    <string name="msg_InvalidName">請輸入姓名！！</string>
    <string name="msg_InvalidPassword">\t密碼長度錯誤！！\n請輸入密碼(4-8字元)</string>
    <string name="msg_InvalidPasswordOld">舊密碼輸入錯誤！！</string>
    <string name="text_Revise">修改會員資料</string>
    <string name="msg_noLogin">尚未登入</string>
    <string name="text_Save">儲存</string>
    <string name="msg_UpdateFail">修改失敗</string>
    <string name="msg_UpdateSuccess">修改成功</string>
    <string name="msg_MessageWarning">*此優惠卷無法跟其他優惠卷合併使用</string>
    <string name="text_LogOut">登出</string>
    <string name="text_FoodManager">食材管理</string>
    <string name="text_MenuManager">菜單管理</string>
    <string name="text_MessageManager">優惠管理</string>
    <string name="text_RatingManager">意見管理</string>
    <string name="text_ServiceWaiter">服務鈴</string>
    <string name="text_MemberManager">會員管理</string>
    <string name="text_CheckWaiter">餐點</string>
    <string name="text_CheckManager">結帳系統</string>
    <string name="typeName">預約餐點與座位</string>
    <string name="tvNews">營業時間: 11:00 - 21:00</string>
    <string name="tvReserve">日期</string>
    <string name="tvReserveNews">開放訂位時間為一天前至一個月</string>
    <string name="dateName">日&#160;期</string>
    <string name="typeDate">____________</string>
    <string name="btDate">選擇日期</string>
    <string name="timeName">時&#160;間</string>
    <string name="btTime">選擇時間</string>
    <string name="personName">人&#160;數</string>
    <string name="personNumber">輸入預約人數</string>
    <string name="text_order">訂位 / 點餐</string>
    <string name="text_Reservaton">訂位服務</string>
    <string name="btConfirm">確認</string>
    <string name="tvReserveResult">訂位完成後,如需取消,請三天前告知</string>
    <string name="btName">繼續點餐</string>
    <string name="msg_AccountExists">帳號已存在！！</string>
    <string name="text_LiveOrdering">現場點餐</string>
    <string name="btnotorder">訂位不點餐</string>
    <string name="btContinueOrder">繼續點餐</string>
    <string name="btContOrder">繼續點餐</string>
    <string name="btcancelrder">取消</string>
    <string name="hint_etName">請輸入姓名</string>
    <string name="hint_etComment">請輸入評論</string>
    <string name="text_new">新增</string>
    <string name="msg_RatingIsInvalid">請輸入評分!</string>
    <string name="msg_CommentIsInvalid">請輸入評論!</string>
    <string name="msg_RatingInsertFail">新增失敗!請再評分一次!</string>
    <string name="msg_RatingInsertSuccess">感謝您的評論!</string>
    <string name="text_etCommentName">王小明</string>
    <string name="hint_etCommentReply">請輸入回應</string>
    <string name="btRating">評價</string>
    <string name="text_ComentDelete">刪除評價</string>
    <string name="message_text_title">\t標\t\t題</string>
    <string name="hint_message_title">請輸入標題</string>
    <string name="message_text_promotion_message">優惠訊息</string>
    <string name="hint_message_text_promotion_message">請輸入優惠訊息</string>
    <string name="text_message_discount">\t折\t\t扣</string>
    <string name="hint_message_discount">請輸入折扣</string>
    <string name="message_text_inset_image">新增圖片</string>
    <string name="text_save">儲存</string>
    <string name="text_Edit">編輯</string>
    <string name="hint_message_start_time">請選取開始時間</string>
    <string name="text_message_message_start_time">開始日期</string>
    <string name="text_message_message_end_time">結束日期</string>
    <string name="hint_message_end_time">請選取結束日期</string>
    <string name="msg_EndDateNotLessThanStartDate">結束日期不可小於開始日期</string>
    <string name="text_NoCameraApp">沒有相機可以使用</string>
    <string name="msg_NoImage">無圖片</string>
    <string name="message">優惠訊息</string>

    <string name="tvReserveNews1">當天訂位請來電 02-2345678</string>
    <string name="text_NotGranted">不允許</string>
    <string name="text_rating_new">新增評論</string>
    <string name="checkOrder">訂位</string>
    <string name="checkRecord">點餐紀錄</string>
    <string name="orderPagerItem">2018-07-04 18:00</string>
    <string name="showDate">日期</string>
    <string name="showOrderId">訂單編號</string>
    <string name="showTaype">品項</string>
    <string name="OrderType">海鮮鍋,我我我</string>
    <string name="showDate1">2108/04/30</string>
    <string name="OrderNumber">1</string>
    <string name="tvTyeCount">數量</string>
    <string name="tvTypePrice">小計</string>
    <string name="tvPutCount">3</string>
    <string name="tvPutPrice">200</string>
    <string name="detailType">海鮮鍋</string>
    <string name="check1Type">牛肉鍋</string>

    <string name="menu_name">\t菜\t\t名</string>
    <string name="hint_menu_name">請輸入菜名</string>
    <string name="menu_price">\t價\t\t格</string>
    <string name="menu_type">\t種\t\t類</string>
    <string name="hint_menu_price">請輸入價格</string>
    <string name="menu_delete">刪除此菜單</string>
    <string name="menu_count">\t數\t\t量</string>
    <string name="hint_menu_count">請輸入數量</string>


</resources>
