<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">



    <include layout="@layout/tool_bar_title"></include>

      <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/showOrderId"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tvOrderNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/OrderNumber"
        android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/showDate"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tvOrderDate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showDate1"
            android:textSize="20dp"/>

    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvType2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/showTaype"
            android:textSize="20dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tvTypeCount2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvType"
            android:text="@string/tvTyeCount"
            android:textSize="20dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tvTypePricce2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvType"
            android:text="@string/tvTypePrice"
            android:textSize="20dp"
            android:gravity="center"/>

    </LinearLayout>

  </LinearLayout>



   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <android.support.v7.widget.RecyclerView
        android:id="@+id/recordDetailRecyclerView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

   </LinearLayout>

</LinearLayout>