<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar_title"></include>

    <RelativeLayout
        android:id="@+id/rv_btMessageSave"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/btMessageSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:paddingEnd="10dp"
            android:text="@string/text_save"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rv_btMessageSave">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_text_title"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/etMessageInsertTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:hint="@string/hint_message_title"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_message_message_start_time"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvMessageInsertStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:hint="@string/hint_message_start_time"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_message_message_end_time"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvMessageInsertEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:hint="@string/hint_message_end_time"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/message_text_promotion_message"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/etMessageInsertPromotionMessage"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/edittext"
                android:gravity="top"
                android:hint="@string/hint_message_text_promotion_message"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_message_discount"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/etMessageInsertDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:hint="@string/hint_message_discount"
                    android:inputType="numberDecimal"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivMessageInsertImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pot" />

                <Button
                    android:id="@+id/btMessageInsertPicture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/button_menus"
                    android:text="@string/message_text_inset_image" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>