<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar_title"></include>

    <RelativeLayout
        android:id="@+id/rv_btRegise"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/btReviseSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tvTool_bar_title"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:paddingEnd="10dp"
            android:text="@string/text_Save"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rv_btRegise">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/pic_pot" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_name"
                    android:textColor="@color/colorContent"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etReviseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/hint_insertName"
                    android:textColor="@color/colorContent"
                    android:textSize="20dp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title"
                    android:textColor="@color/colorContent"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/rgReviseGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal"
                    tools:ignore="RtlCompat">

                    <RadioButton
                        android:id="@+id/rbReviseMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/text_rbMale"
                        android:textSize="20dp" />

                    <RadioButton
                        android:id="@+id/rbReviseFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/text_rbFemale"
                        android:textSize="20dp" />


                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_account"
                    android:textColor="@color/colorContent"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/etReviseEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/hint_etUser"
                    android:textSize="20dp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_passwordOld"
                    android:textColor="@color/colorContent"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etRevisePasswordOld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/hint_etPasswordOld"
                    android:inputType="textPassword"
                    android:textSize="20dp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_passwordNew"
                    android:textColor="@color/colorContent"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etRevisePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/hint_etPassword"
                    android:inputType="textPassword"
                    android:textSize="20dp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_CheckPassword"
                    android:textColor="@color/colorContent"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etReviseCheckPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/hint_CheckPassword"
                    android:inputType="textPassword"
                    android:textSize="20dp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_Phone"
                    android:textColor="@color/colorContent"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etRevisePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/hint_Phone"
                    android:inputType="number"
                    android:textSize="20dp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>